added cart button with counter changes when adding

--- a/shop/static/shop/style.css
+++ b/shop/static/shop/style.css
@@ -48,4 +48,12 @@ img {
 
 }
 
-
+.cart-popup {
+    display: none;
+    margin: auto;
+    width: 400px;
+    height: 800px;
+    border-radius: 15px;
+    margin: 150px auto;
+    z-index: 9;
+}
