--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -7,13 +7,19 @@
     <script type="module" src="https://cdn.jsdelivr.net/npm/beercss@3.6.8/dist/cdn/beer.min.js"></script>
 
     <script type="module" src="https://cdn.jsdelivr.net/npm/material-dynamic-colors@1.1.2/dist/cdn/material-dynamic-colors.min.js"></script>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seniors 2022</title>
     <link rel="stylesheet" href="{% static "shop/style.css" %}">
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 </head>
 <body>    
+    <button>
+        <i class="fas fa-shopping-cart"></i>
+        <div id="cart" class="badge top left">0</div>
+    </button>
     {% block body %}
     {% endblock body %}
 </body>
+<script src="{% static "shop/cart.js" %}"></script>
 </html>
