there is a problem when submiting an order

--- a/shop/templates/shop/home.html
+++ b/shop/templates/shop/home.html
@@ -7,9 +7,9 @@
 </button>
 {% for product in products %}
 <div class="card">
-    <div id="productId" class="product">
+    <div class="product">
         <img src="{{product.image}}" alt="Seniors T-shirt">
-          <h1 class="head">{{product.title}}</h1>
+          <h1 id="productId" class="head">{{product.title}}</h1>
           <div class="field middle-align">
                 <nav >
                     <label class="checkbox">
